--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.17.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "node-sass-middleware": "0.8.0",
-    "serve-favicon": "~2.3.0"
+    "debug": "^2.6.6",
+    "express": "^4.15.2",
+    "morgan": "^1.8.1",
+    "node-sass-middleware": "^0.11.0",
+    "pug": "^2.0.0-beta.12",
+    "serve-favicon": "^2.4.2"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
