--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "express": "^4.15.2",
     "morgan": "^1.8.1",
     "node-sass-middleware": "^0.11.0",
-    "pug": "^2.0.0-beta.12",
+    "pug": "^2.0.0-rc.1",
     "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
