--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "bootstrap": "4.0.0-alpha.6",
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.6",
     "express": "^4.15.2",
+    "material-icons": "^0.1.0",
     "morgan": "^1.8.1",
     "node-sass-middleware": "^0.11.0",
     "pug": "^2.0.0-rc.1",
-    "serve-favicon": "^2.4.2"
+    "serve-favicon": "^2.4.2",
+    "webpack": "^2.5.0",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
