--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "^2.6.6",
     "express": "^4.15.2",
     "material-icons": "^0.1.0",
+    "mongoose": "^4.9.7",
     "morgan": "^1.8.1",
     "node-sass-middleware": "^0.11.0",
     "pug": "^2.0.0-rc.1",
