--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "bootstrap": "4.0.0-alpha.6",
+    "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.6",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
     "material-icons": "^0.1.0",
     "mongoose": "^4.9.7",
     "morgan": "^1.8.1",
