--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,12 @@
     "plugins": [
         "import"
     ],
-    "settings": {
+    "env": {
+        "browser": true,
+        "node": true,
+        "es6": true
+    },
+    "rules": {
         "indent": ["error", 4]
     }
 }
