--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.9.0",
     "debug": "^2.6.6",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
